Extend login & data model for more customization features
* read and persist midata groups/roles/permissions on login #7
* read and persist primary midata group on login #7 + #9
* persist tile position in user_tile to allow custom order #9
* migrate provisioning to user #9